# insurance-claims-checker

./: .gitignore  README.md  demo_answers.txt  pyproject.toml
app/: components.py  streamlit_app.py
data/: eval_report.json  eval_report.md
eval/: cases.py  report.py  run_eval.py
plans/: ARCHITECTURE.md  CONTRACTS.md
src/claims/: config.py  models.py  policy.py  roster.py  service.py  trace.py
src/claims/audit/: store.py
src/claims/extraction/: base.py  injected.py  vision.py
src/claims/llm/: gemini_client.py  gemini_mapper.py  prompts.py  semantic_mapper.py
src/claims/pipeline/: aggregator.py  document_verifier.py  intake.py  orchestrator.py
src/claims/pipeline/checks/: base.py  coverage.py  exclusions.py  financial.py  fraud.py  limits.py  pre_auth.py  waiting_period.py
tests/: conftest.py  test_aggregator.py  test_audit_store.py  test_checks.py  test_document_verifier.py  test_eval_cases.py  test_intake.py  test_orchestrator.py  test_policy.py  test_semantic_mapper.py
